--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -13,7 +13,7 @@ jobs:
       - name: "Install style checker"
         run: pip install black
       - name: "Run style check and tell what is wrong"
-        run: black --check -diff *.py
+        run: black --check --diff *.py
   test:
     needs: style_check
     runs-on: ubuntu-latest
