--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -22,6 +22,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.8"
+      - name: "Install pytest"
+        run: pip install pytest
       - name: "Run pytest"
         run: python -m pytest
       - name: "Install coverage"
