--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -22,12 +22,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.8"
-      - name: "Install pytest"
-        run: pip install pytest
-      - name: "Run pytest"
-        run: python -m pytest
-      - name: "Install coverage"
-        run: pip install -U coverage
+      - name: "Install requirements"
+        run: pip install -r requirements.txt
       - name: "Run coverage"
         run: coverage run -m pytest
       - name: "Generate coverage report"
